--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -326,6 +326,10 @@ p:last-child {
 .mt-150 {
   margin-top: 150px;
 }
+.mt-50 {
+  margin-top: 50px;
+}
+
 
 @media only screen and (max-width: 767.96px) {
   .mt-150 {
@@ -489,7 +493,7 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
 
 
 .breadcrumb-text p {
-  color: #217cc1;
+  color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 7px;
@@ -504,13 +508,13 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
 }
 
 .breadcrumb-section {
-  padding: 273px 0;
+  padding: 100px 0;
   background-size: cover;
   background-position: center center;
   position: relative;
   /* z-index: 1; */
   background-attachment: fixed;
-  padding-top: 200px;
+  padding-top: 65px;
 }
 
 .breadcrumb-section:after {
@@ -536,15 +540,12 @@ ul.navbar-nav li.nav-item a.nav-link, ul.navbar-nav li.nav-item.active a.nav-lin
 
 .top-header-area {
   /* position: -webkit-sticky; */
-   position: fixed;
+   /* position: fixed; */
    background-color: #0772c5;
    z-index: 999;
    width: 100%;
    top:0px;
    padding: 0px;
- }
- .homepage-slider{
-   margin-top:47px;
  }
 
 .top-header-area.white ul.navbar-nav li.nav-item a.nav-link, .top-header-area.white ul.navbar-nav li.nav-item.active a.nav-link {
@@ -573,7 +574,7 @@ nav.main-menu ul li {
 
 nav.main-menu ul li a:not(.register-btn) {
   color: #fff;
-  font-weight: 700;
+  font-weight: 300;
   display: block;
   padding: 15px;
   font-size: larger;
@@ -606,6 +607,7 @@ nav.main-menu ul ul.sub-menu {
   visibility: hidden;
   -webkit-box-shadow: 0 0 20px #555555;
   box-shadow: 0 0 20px #555555;
+  z-index: 5;
 }
 
 nav.main-menu ul ul.sub-menu li {
@@ -733,12 +735,12 @@ nav.main-menu ul li.current-list-item > a {
 }
 .active > a {
   color: #f9fbfe;
-  background-color:#0a0b0c;
+  background-color:#000000;
   /* background-color: #FFC72C; */
   /* border-radius: 50%; */
   /* border-radius: 50px 20px; */
   
-  opacity:0.2;
+  opacity:0.9;
 }
 nav.main-menu li:hover > a {
   color: #ffab2c;
@@ -1413,7 +1415,8 @@ a.mobile-show.search-bar-icon:hover {
 
 ----------------------------------------------------------------------------- */
 .hero-bg {
-  background-image: url(../img/hero-bg.jpg);
+  /* background-image: url(../img/hero-bg.jpg); */
+  
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -1431,7 +1434,7 @@ a.mobile-show.search-bar-icon:hover {
 .hero-area {
   height: 100%;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 html, body {
@@ -1569,7 +1572,7 @@ input[type="submit"] {
 .single-homepage-slider {
   background-size: cover;
   background-position: center;
-  background-color: #020C0E;
+  /* background-color: #020C0E; */
   position: relative;
   z-index: 1;
 }
@@ -1580,10 +1583,10 @@ input[type="submit"] {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #051922;
+  /* background-color: #051922; */
   content: "";
   z-index: -1;
-  opacity: 0.5;
+  /* opacity: 0.5; */
 }
 
 div.owl-controls, .owl-controls div {
@@ -1727,7 +1730,7 @@ p.excerpt {
 }
 
 .latest-news a.boxed-btn {
-  margin-top: 80px;
+  margin-top: 30px;
 }
 
 .news-text-box {
